--- a/project.properties
+++ b/project.properties
@@ -68,3 +68,5 @@ maven.checkstyle.ignore.public.in.interface = true
 # use retroweaver
 retroweaver.target.version=1.2
 
+# java.net setting
+maven.javanet.project=remote-jive-forum
